[project]
name = "vmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timothy Andersen", email = "timothy.andersen@sandag.org" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "urllib3>=2.7.0",
    "fastexcel>=0.13.0",
    "ipykernel>=7.3.0",
    "kaleido>=1.3.0",
    "office365-rest-python-client>=2.6.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "plotly-stubs>=0.1.3",
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "toml>=0.10.2",
    "tqdm>=4.68.3",
    "watchfiles>=1.2.0",
    "xhtml2pdf>=0.2.17",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "pypdf>=6.14.2",
    "tornado>=6.5.7",
    "cryptography>=49.0.0",
    "PyJWT>=2.13.0",
    "pyjwt>=2.13.0",
    "requests>=2.34.0",
    "lxml>=6.1.1",
    "Pygments>=2.20.0",
    "pytest>=9.1.1",
    "idna>=3.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
